# wave

./: README.md
1.3.2/: Makefile.in  config.h  configure.ac  def.h  dialog_options.c  dialog_options.h  dialog_scheme.c  dialog_scheme.h  dialog_wave.c  dialog_wave.h  scheme.c  scheme.h  simulator.c  simulator.h  todo.h  wave.h
1.3.2/po/es/LC_MESSAGES/: wave.po
1.3.2/po/fr/LC_MESSAGES/: wave.po
1.3.3/: configure.ac  dialog_options.c  dialog_options.h  dialog_scheme.c  dialog_scheme.h  dialog_wave.c  dialog_wave.h  draw.c  draw.h  main.c  simulator.c  simulator.h  wave.c
1.5.0/: Makefile.in  config.h  configure.ac  dialog_options.c  dialog_options.h  dialog_scheme.c  dialog_scheme.h  dialog_wave.c  dialog_wave.h  draw.c  draw.h  main.c  scheme.c  scheme.h  simulator.c  simulator.h  todo.h  wave.c  wave.h
1.5.0/po/es/LC_MESSAGES/: wave.po
1.5.0/po/fr/LC_MESSAGES/: wave.po
2.1.0/: Makefile  cell1d.c  cell1d.h  config.h  def.h  domain1d.c  domain1d.h  makefile  mesh1d.c  mesh1d.h  mesh_type.h  prueba.xml  shape1d.c  shape1d.h  wave.c  wave.h  wave.tex  wave1d.c  wave1d.h
